--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,13 +1,12 @@
-# monitoring/prometheus.yml
-
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
 scrape_configs:
-  # Scrape Prometheus itself
   - job_name: "prometheus"
     static_configs:
       - targets: ["prometheus:9090"]
 
-  # TODO: Scraper votre serveur web (node_exporter ou app Node)
+  - job_name: "web1"
+    static_configs:
+      - targets: ["host.docker.internal:9100"]
